--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,11 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
+  "description": "MaiMai Tournament Backend",
   "main": "index.js",
+  "engines": {
+    "node": "18.x" 
+  },
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
@@ -15,6 +18,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "lodash": "^4.17.21",
+    "mongoose": "^9.1.3",
     "nodemon": "^3.1.11",
     "socket.io": "^4.8.3"
   }
